[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/NetworkSetup/NetworkSetup.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/ServerAdvertiser.gd" type="Script" id=3]
[ext_resource path="res://scripts/ServerBrowser.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=3]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.623529, 1, 1 )
border_width_left = 8
border_width_top = 4
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 0.560784, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 24.0
content_margin_right = 24.0
bg_color = Color( 0, 0.156863, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_color = Color( 1, 0.560784, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 24.0
content_margin_right = 24.0
bg_color = Color( 0, 0.623529, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_color = Color( 1, 0.560784, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 4.0

[sub_resource type="Theme" id=2]
TabContainer/colors/font_color_bg = Color( 1, 1, 1, 1 )
TabContainer/constants/side_margin = 17
TabContainer/fonts/font = SubResource( 3 )
TabContainer/styles/panel = SubResource( 4 )
TabContainer/styles/tab_bg = SubResource( 5 )
TabContainer/styles/tab_fg = SubResource( 6 )

[sub_resource type="DynamicFont" id=7]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )
Label/colors/font_color = Color( 1, 1, 1, 1 )

[node name="NetworkSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
tab_align = 0

[node name="Join server" type="MarginContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 43.0
margin_right = -8.0
margin_bottom = -8.0
custom_constants/margin_right = 15
custom_constants/margin_top = 8
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Join server"]
margin_left = 15.0
margin_top = 8.0
margin_right = 1249.0
margin_bottom = 654.0

[node name="Browser" type="HBoxContainer" parent="TabContainer/Join server/VBoxContainer"]
margin_right = 978.0
margin_bottom = 490.0
size_flags_vertical = 3

[node name="ServerName" type="VBoxContainer" parent="TabContainer/Join server/VBoxContainer/Browser"]
margin_right = 318.0
margin_bottom = 490.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Join server/VBoxContainer/Browser/ServerName"]
margin_right = 318.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 7 )
text = "Server name"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Join server/VBoxContainer/Browser/ServerName"]
margin_top = 23.0
margin_right = 318.0
margin_bottom = 27.0

[node name="Names" type="VBoxContainer" parent="TabContainer/Join server/VBoxContainer/Browser/ServerName"]
margin_top = 31.0
margin_right = 318.0
margin_bottom = 31.0

[node name="VSeparator" type="VSeparator" parent="TabContainer/Join server/VBoxContainer/Browser"]
margin_left = 322.0
margin_right = 326.0
margin_bottom = 490.0

[node name="ServerDesc" type="VBoxContainer" parent="TabContainer/Join server/VBoxContainer/Browser"]
margin_left = 330.0
margin_right = 648.0
margin_bottom = 490.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Join server/VBoxContainer/Browser/ServerDesc"]
margin_right = 318.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 7 )
text = "Description"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Join server/VBoxContainer/Browser/ServerDesc"]
margin_top = 23.0
margin_right = 318.0
margin_bottom = 27.0

[node name="Descriptions" type="VBoxContainer" parent="TabContainer/Join server/VBoxContainer/Browser/ServerDesc"]
margin_top = 31.0
margin_right = 318.0
margin_bottom = 31.0

[node name="VSeparator2" type="VSeparator" parent="TabContainer/Join server/VBoxContainer/Browser"]
margin_left = 652.0
margin_right = 656.0
margin_bottom = 490.0

[node name="NbPlayers" type="VBoxContainer" parent="TabContainer/Join server/VBoxContainer/Browser"]
margin_left = 660.0
margin_right = 978.0
margin_bottom = 490.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Join server/VBoxContainer/Browser/NbPlayers"]
margin_right = 318.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 7 )
text = "Player count"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Join server/VBoxContainer/Browser/NbPlayers"]
margin_top = 23.0
margin_right = 318.0
margin_bottom = 27.0

[node name="PlayerCounts" type="VBoxContainer" parent="TabContainer/Join server/VBoxContainer/Browser/NbPlayers"]
margin_top = 31.0
margin_right = 318.0
margin_bottom = 31.0

[node name="HSeparator" type="HSeparator" parent="TabContainer/Join server/VBoxContainer"]
margin_top = 494.0
margin_right = 978.0
margin_bottom = 498.0

[node name="Manual" type="HBoxContainer" parent="TabContainer/Join server/VBoxContainer"]
margin_top = 502.0
margin_right = 978.0
margin_bottom = 526.0

[node name="ServerIp" type="HBoxContainer" parent="TabContainer/Join server/VBoxContainer/Manual"]
margin_right = 318.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="TabContainer/Join server/VBoxContainer/Manual/ServerIp"]
margin_top = 5.0
margin_right = 69.0
margin_bottom = 19.0
text = "Server IP : "

[node name="LineEdit" type="LineEdit" parent="TabContainer/Join server/VBoxContainer/Manual/ServerIp"]
margin_left = 73.0
margin_right = 318.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Enter server IP"

[node name="VSeparator" type="VSeparator" parent="TabContainer/Join server/VBoxContainer/Manual"]
margin_left = 322.0
margin_right = 326.0
margin_bottom = 24.0

[node name="ServerPort" type="HBoxContainer" parent="TabContainer/Join server/VBoxContainer/Manual"]
margin_left = 330.0
margin_right = 648.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="TabContainer/Join server/VBoxContainer/Manual/ServerPort"]
margin_top = 5.0
margin_right = 82.0
margin_bottom = 19.0
text = "Server port : "

[node name="LineEdit" type="LineEdit" parent="TabContainer/Join server/VBoxContainer/Manual/ServerPort"]
margin_left = 86.0
margin_right = 318.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Enter server IP"

[node name="VSeparator2" type="VSeparator" parent="TabContainer/Join server/VBoxContainer/Manual"]
margin_left = 652.0
margin_right = 656.0
margin_bottom = 24.0

[node name="Connect" type="HBoxContainer" parent="TabContainer/Join server/VBoxContainer/Manual"]
margin_left = 660.0
margin_right = 978.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Label" type="Label" parent="TabContainer/Join server/VBoxContainer/Manual/Connect"]
margin_top = 5.0
margin_right = 74.0
margin_bottom = 19.0
text = "Username :"

[node name="LineEdit" type="LineEdit" parent="TabContainer/Join server/VBoxContainer/Manual/Connect"]
margin_left = 78.0
margin_right = 250.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_length = 16
placeholder_text = "Enter username"

[node name="Button" type="Button" parent="TabContainer/Join server/VBoxContainer/Manual/Connect"]
margin_left = 254.0
margin_right = 318.0
margin_bottom = 24.0
text = "Connect"

[node name="Host server" type="CenterContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 43.0
margin_right = -8.0
margin_bottom = -8.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Host server"]
margin_left = 418.0
margin_top = 247.0
margin_right = 846.0
margin_bottom = 421.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Host server/VBoxContainer"]
margin_right = 428.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="PortLabel" type="Label" parent="TabContainer/Host server/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 124.0
margin_bottom = 19.0
text = "Server port : "

[node name="PortInput" type="LineEdit" parent="TabContainer/Host server/VBoxContainer/GridContainer"]
margin_left = 128.0
margin_right = 428.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 0 )
text = "1234"
max_length = 10

[node name="NameLabel" type="Label" parent="TabContainer/Host server/VBoxContainer/GridContainer"]
margin_top = 33.0
margin_right = 124.0
margin_bottom = 47.0
text = "Server name :"

[node name="NameInput" type="LineEdit" parent="TabContainer/Host server/VBoxContainer/GridContainer"]
margin_left = 128.0
margin_top = 28.0
margin_right = 428.0
margin_bottom = 52.0
text = "PW server"
max_length = 16

[node name="DescLabel" type="Label" parent="TabContainer/Host server/VBoxContainer/GridContainer"]
margin_top = 61.0
margin_right = 124.0
margin_bottom = 75.0
text = "Server description :"

[node name="DescInput" type="LineEdit" parent="TabContainer/Host server/VBoxContainer/GridContainer"]
margin_left = 128.0
margin_top = 56.0
margin_right = 428.0
margin_bottom = 80.0
rect_min_size = Vector2( 300, 0 )
text = "A Panda War server"
max_length = 128

[node name="UsernameLabel" type="Label" parent="TabContainer/Host server/VBoxContainer/GridContainer"]
margin_top = 89.0
margin_right = 124.0
margin_bottom = 103.0
text = "Username :"

[node name="UsernameInput" type="LineEdit" parent="TabContainer/Host server/VBoxContainer/GridContainer"]
margin_left = 128.0
margin_top = 84.0
margin_right = 428.0
margin_bottom = 108.0
max_length = 16

[node name="GameLengthLabel" type="Label" parent="TabContainer/Host server/VBoxContainer/GridContainer"]
margin_top = 115.0
margin_right = 124.0
margin_bottom = 129.0
text = "Game length :"

[node name="GLOptionButton" type="OptionButton" parent="TabContainer/Host server/VBoxContainer/GridContainer"]
margin_left = 128.0
margin_top = 112.0
margin_right = 428.0
margin_bottom = 132.0
text = "5mn"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Host server/VBoxContainer"]
margin_top = 136.0
margin_right = 428.0
margin_bottom = 140.0

[node name="CreateServer" type="Button" parent="TabContainer/Host server/VBoxContainer"]
margin_top = 144.0
margin_right = 428.0
margin_bottom = 174.0
rect_min_size = Vector2( 0, 30 )
text = "Create server"

[node name="Lobby" type="MarginContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 43.0
margin_right = -8.0
margin_bottom = -8.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Lobby"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1254.0
margin_bottom = 659.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="VBoxContainer" parent="TabContainer/Lobby/HBoxContainer"]
margin_right = 488.0
margin_bottom = 529.0
size_flags_horizontal = 3

[node name="Players" type="VBoxContainer" parent="TabContainer/Lobby/HBoxContainer/Left"]
margin_right = 488.0
margin_bottom = 461.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="TabContainer/Lobby/HBoxContainer/Left/Players"]
margin_right = 488.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 8 )
text = "Players :"

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Lobby/HBoxContainer/Left/Players"]
margin_top = 42.0
margin_right = 488.0
margin_bottom = 461.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Lobby/HBoxContainer/Left/Players/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 488.0
margin_bottom = 419.0
scroll_horizontal_enabled = false

[node name="PlayerContainer" type="VBoxContainer" parent="TabContainer/Lobby/HBoxContainer/Left/Players/MarginContainer/ScrollContainer"]
margin_right = 478.0
margin_bottom = 409.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 10 )

[node name="HSeparator" type="HSeparator" parent="TabContainer/Lobby/HBoxContainer/Left"]
margin_top = 465.0
margin_right = 488.0
margin_bottom = 469.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Lobby/HBoxContainer/Left"]
margin_top = 473.0
margin_right = 488.0
margin_bottom = 529.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.12
alignment = 1

[node name="StartButton" type="Button" parent="TabContainer/Lobby/HBoxContainer/Left/HBoxContainer"]
margin_right = 488.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "Start game"

[node name="VSeparator" type="VSeparator" parent="TabContainer/Lobby/HBoxContainer"]
margin_left = 492.0
margin_right = 496.0
margin_bottom = 529.0

[node name="Chat" type="VBoxContainer" parent="TabContainer/Lobby/HBoxContainer"]
margin_left = 500.0
margin_right = 988.0
margin_bottom = 529.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="TabContainer/Lobby/HBoxContainer/Chat"]
margin_right = 488.0
margin_bottom = 461.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Lobby/HBoxContainer/Chat/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Lobby/HBoxContainer/Chat/Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 478.0
margin_bottom = 461.0
scroll_horizontal_enabled = false

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Lobby/HBoxContainer/Chat/Panel/MarginContainer/ScrollContainer"]
margin_right = 468.0
margin_bottom = 451.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="HSeparator" type="HSeparator" parent="TabContainer/Lobby/HBoxContainer/Chat"]
margin_top = 465.0
margin_right = 488.0
margin_bottom = 469.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Lobby/HBoxContainer/Chat"]
margin_top = 473.0
margin_right = 488.0
margin_bottom = 529.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.12

[node name="TextEdit" type="TextEdit" parent="TabContainer/Lobby/HBoxContainer/Chat/HBoxContainer"]
margin_right = 444.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_enabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Lobby/HBoxContainer/Chat/HBoxContainer"]
margin_left = 448.0
margin_right = 488.0
margin_bottom = 56.0
alignment = 1

[node name="ChatButton" type="Button" parent="TabContainer/Lobby/HBoxContainer/Chat/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 38.0
size_flags_vertical = 0
text = "Chat"

[node name="MessageLabel" type="Label" parent="."]
margin_left = 704.0
margin_right = 1024.0
margin_bottom = 32.0
valign = 1

[node name="ServerBrowser" type="Node" parent="."]
script = ExtResource( 4 )

[node name="ServerAdvertiser" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="gui_input" from="TabContainer/Join server/VBoxContainer/Browser" to="." method="_on_Browser_gui_input"]
[connection signal="text_changed" from="TabContainer/Join server/VBoxContainer/Manual/ServerPort/LineEdit" to="." method="_on_CliPort_text_changed"]
[connection signal="pressed" from="TabContainer/Join server/VBoxContainer/Manual/Connect/Button" to="." method="_on_Join_pressed"]
[connection signal="text_changed" from="TabContainer/Host server/VBoxContainer/GridContainer/PortInput" to="." method="_on_SrvServerPort_text_changed"]
[connection signal="pressed" from="TabContainer/Host server/VBoxContainer/CreateServer" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="TabContainer/Lobby/HBoxContainer/Left/HBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="TabContainer/Lobby/HBoxContainer/Chat/HBoxContainer/VBoxContainer/ChatButton" to="." method="_on_Chat_submit"]
